01-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  selector:
    app: mydb
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mydb
spec:
  selector:
    matchLabels:
      app: mydb
  serviceName: db-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: mydb
    spec:
      containers:
        - name: mydb
          image: ekchoi3912/mysql:5.7
          args:
            - "--ignore-db-dir=lost+found"
          ports:
            - containerPort: 3306
              name: tcp
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init-sql
          configMap:
            name: mysql-init-sql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ebs-gp3
        resources:
          requests:
            storage: 10Gi
