03-flask.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  # annotations:
  #   cloud.google.com/backend-config: '{"default": "my-backend-config"}'
spec:
  selector:
    app: myapp
  ports: 
  - port: 5000
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: ekchoi3912/was1:v1
        ports:
        - containerPort: 5000
